Bug 44578 - missing multitouch related define tests
Summary: missing multitouch related define tests
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Input/evdev (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium minor
Assignee: Peter Hutterer
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-08 06:51 UTC by Pete Beardmore
Modified: 2012-01-09 16:59 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
the missing multitouch define tests (988 bytes, application/octet-stream)
2012-01-08 06:51 UTC, Pete Beardmore
no flags Details
git formatted patch (although clearly meant for mailing lists!) (1.70 KB, patch)
2012-01-09 16:38 UTC, Pete Beardmore
no flags Details | Splinter Review
config.log (51.47 KB, text/plain)
2012-01-09 16:39 UTC, Pete Beardmore
no flags Details
configure and make output (20.93 KB, application/octet-stream)
2012-01-09 16:40 UTC, Pete Beardmore
no flags Details

Description Pete Beardmore 2012-01-08 06:51:42 UTC
Created attachment 55293 [details]
the missing multitouch define tests

i couldn't build this morning. see patch.
Comment 1 Peter Hutterer 2012-01-08 17:56:27 UTC
Please submit patches as git-formatted patches. For more info see http://www.x.org/wiki/Development/Documentation/SubmittingPatches

Patch looks ok, but please attach your build errors, I'd like to know what triggered them. Old kernel?
Comment 2 Pete Beardmore 2012-01-09 16:36:33 UTC
a new kernel (3.1.3), but as i've always been rather reluctant to install new kernel headers to userspace i imagine the stock 2.6.37.6 input.h will have been referenced, hence the 'missing' ABS_MT_DISTANCE
Comment 3 Pete Beardmore 2012-01-09 16:38:15 UTC
Created attachment 55356 [details] [review]
git formatted patch (although clearly meant for mailing lists!)
Comment 4 Pete Beardmore 2012-01-09 16:39:46 UTC
Created attachment 55357 [details]
config.log
Comment 5 Pete Beardmore 2012-01-09 16:40:36 UTC
Created attachment 55358 [details]
configure and make output
Comment 6 Peter Hutterer 2012-01-09 16:59:37 UTC
Pushed as 854df75f4908bee66e1057f6f04817a1c47124bc, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.